--- a/NavigineDemo/app/src/main/res/layout/activity_main.xml
+++ b/NavigineDemo/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,10 @@
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">
 
-        <ImageView android:id="@+id/navigation__map_image"
-                   android:layout_width="fill_parent"
-                   android:layout_height="fill_parent"/>
-
-        <ImageView android:id="@+id/navigation__ext_image"
-                   android:layout_width="fill_parent"
-                   android:layout_height="fill_parent"/>
-
+        <com.navigine.naviginesdk.LocationView android:id="@+id/navigation__location_view"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"/>
+        
         <TextView android:id="@+id/navigation__info_label"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
@@ -26,27 +22,6 @@
                   android:background="#EC7703"
                   android:textSize="16dp"
                   android:textColor="#000000"/>
-
-        <Button android:id="@+id/navigation__make_route_button"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
-                android:layout_gravity="top|left"
-                android:background="@drawable/make_route_button"
-                android:onClick="onMakeRoute"
-                android:textAllCaps="false"
-                android:textSize="16dp"
-                android:text="Make route"
-                android:textColor="#ffffff"/>
-
-        <Button android:id="@+id/navigation__venue_button"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
-                android:layout_gravity="top|left"
-                android:background="@drawable/venue_button"
-                android:onClick="onVenueClick"
-                android:textAllCaps="false"
-                android:textSize="16dp"
-                android:textColor="#ffffff"/>
 
         <!-- Previous floor button -->
         <LinearLayout android:id="@+id/navigation__back_view"
